--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ layout: default
         <div class="inner split">
             <div>
                 <section>
-                    <h2>Hey there, my name is Ram</h2>
+                    <h2>Hey there, this is a world of Brown & Cony</h2>
                     <p>{{ site.bio }}</p>
                     <p>{{ site.publicise }}</p>
                 </section>
